Add default loader to expensive pages

--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -20,6 +20,9 @@
 	<title th:text="#{delete-account.title}"></title>
 </head>
 <body>
+	<div class="loader-parent" id="preloader-parent" style="display: flex">
+		<div class="loader" id="preloader"></div>
+	</div>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
 
@@ -53,7 +56,7 @@
 		</div>
 		
 		<div class="loader-parent">
-			<div class="loader"></div>
+			<div class="loader" id="loader"></div>
 		</div>
 
 	</div>
