--- a/src/main/resources/templates/disliked-users.html
+++ b/src/main/resources/templates/disliked-users.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+	<div class="loader-parent" id="preloader-parent" style="display: flex">
+		<div class="loader" id="preloader"></div>
+	</div>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<section class="container" id="main-container">
@@ -52,8 +55,8 @@
 		</section>
 	</div>
 
-	<div class="loader-parent">
-		<div class="loader"></div>
+	<div class="loader-parent" id="loader-parent">
+		<div class="loader" id="loader"></div>
 	</div>
 	
 	<div id="user-profile-container"></div>
