--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+	<div class="loader-parent" id="preloader-parent" style="display: flex">
+		<div class="loader" id="preloader"></div>
+	</div>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<div class="section" style="scrollbar-width: auto !important; ">
@@ -496,8 +499,8 @@
 		</div>
 	</div>
 	
-	<div class="loader-parent">
-		<div class="loader"></div>
+	<div class="loader-parent" id="loader-parent">
+		<div class="loader" id="loader"></div>
 	</div>
 
 	<input type="hidden" th:value="${vapidPublicKey}" id="vapidPublicKey"></input>
