--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -26,6 +26,11 @@
 </head>
 
 <body class="preload">
+
+	<div class="loader-parent" id="preloader-parent" style="display: flex">
+		<div class="loader" id="preloader"></div>
+	</div>
+
 	<div id="has-location" th:if="${user.hasLocation}"></div>
 	<div id="lat" th:value="${user.locationLatitude}"></div>
 	<div id="lon" th:value="${user.locationLongitude}"></div>
@@ -122,8 +127,8 @@
 	
 	<div id="user-profile-container"></div>
 		
-	<div class="loader-parent">
-		<div class="loader"></div>
+	<div class="loader-parent" id="loader-parent">
+		<div class="loader" id="loader"></div>
 	</div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
