--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -539,7 +539,7 @@
 			<script src="/js/tools/refresh-captcha.js"></script>
 		</div>
 		<script>
-		$(function() {var swiper = new Swiper('.swiper-container-user-profile', { pagination: { el : '.swiper-pagination'}});});
+		$(function() {var swiper = new Swiper('.swiper-container-user-profile', { navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' }, pagination: { el : '.swiper-pagination'}});});
 	</script>
 	</div>
 	
