Add Dutch language

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -216,6 +216,7 @@
 					<button class="button colored is-primary" value="?lang=fr" onclick="onChangeLocal(this.value)">Français*</button>
 					<button class="button colored is-primary" value="?lang=pt" onclick="onChangeLocal(this.value)">Português*</button>
 					<button class="button colored is-primary" value="?lang=it" onclick="onChangeLocal(this.value)">Italiano*</button>
+					<button class="button colored is-primary" value="?lang=nl" onclick="onChangeLocal(this.value)">Nederlands*</button>
 					<button class="button colored is-primary" value="?lang=cz" onclick="onChangeLocal(this.value)">Čeština*</button>
 					<button class="button colored is-primary" value="?lang=ru" onclick="onChangeLocal(this.value)">русский*</button>
 					<button class="button colored is-primary" value="?lang=ja" onclick="onChangeLocal(this.value)">日本語*</button>
