--- a/src/main/resources/templates/profile-onboarding.html
+++ b/src/main/resources/templates/profile-onboarding.html
@@ -122,6 +122,7 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/lib/jquery-ui.min.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
 	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
