--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/profile.css" />
+	
 	<title th:text="#{profile.title}"></title>
 </head>
 
@@ -512,6 +513,7 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/lib/jquery-ui.min.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/lib/bulma-toast.min.js"></script>
