--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,11 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Alovoa">
 	<meta name="theme-color" content="#121212">
+	<meta property="og:image" content="/img/share.png">
+	<meta property="og:image:type" content="image/png">
+	<meta property="og:image:width" content="800">
+	<meta property="og:image:height" content="432">
+
 	<link rel="manifest" href="/manifest/manifest.json">
 	<link rel="apple-touch-icon" href="/img/android-chrome-192x192.png">
 
