Add missing closing div tag

--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -37,7 +37,7 @@
 									<label class="label" th:text="#{new-password}"></label>
 									<input class="input" type="password" id="password" required>
 								</div>
-								<div id="password-info" th:text="#{password-change.warning}" style="font-size:0.8em; color: red;">
+								<div id="password-info" th:text="#{password-change.warning}" style="font-size:0.8em; color: red;"></div>
 							</div>
 						</div>
 						<button class="button" th:text="#{submit}"></button>
