--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -47,10 +47,10 @@
 				</div>
 				
 				<div class="field center-parent">
-				<div class="left first-name" style="font-size: 2em" th:text="${user.firstName}"></div>
-				<div class="left" style="font-size: 1.5em; padding-top: 8px;">
-					<span>, </span><span th:text="${user.age}"></span>
-				</div>
+					<div class="left first-name" style="font-size: 2em" th:text="${user.firstName}"></div>
+					<div class="left" style="font-size: 1.5em; padding-top: 8px;">
+						<span>, </span><span th:text="${user.age}"></span> <span th:text="${user.country}"></span>
+					</div>
 				</div>
 
 				<div style="padding-bottom: 24px;"></div>
