Add Ust-ID in imprint

--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -57,7 +57,8 @@
 				<p th:text="${companyName}"></p>
 				<p>Nho Quy Dinh</p>
 				<p>Neulanderweg 18, 21423 Winsen Luhe</p>
-				<p>Tel: 015678593504</p>
+				<p>Tel: +49 (0) 15678593504</p>
+				<p>Ust-ID: DE351860631</p>
 			</div>
 		</div>
 	</div>
