Change removeInterest to use the string instead of the id

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -218,7 +218,7 @@
 									style="float: left; font-size: 1.1em; margin-bottom: 0px;"></div>
 								<i class="fa fa-times"
 									style="float: left; margin-top: 4px; margin-left: 4px; font-size: 1.2em; cursor: pointer;"
-									th:onclick="deleteInterest([[${interest.id}]])"></i>
+									th:onclick="deleteInterest([[${interest.text}]])"></i>
 							</div>
 						</th:block>
 					</div>
