--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}">
+<html th:with="lang=${#locale.language}" th:lang="${lang}" th:attr="dir=#{app.direction}">
 
 <head>
 	<meta charset="utf-8">
