--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" th:attr="dir=#{app.direction}">
+<html th:with="lang=${#locale.language}" th:lang="${lang}" dir="auto">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 
-					<div class="container" style="margin-bottom: 24px;" id="oauth-div">
+					<div class="container" style="margin-bottom: 24px;" dir="ltr" id="oauth-div">
 						<div class="box no-shadow">
 							<div class="columns">
 								<button class="button colored"
