--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" th:attr="dir=#{app.direction}">
+<html th:with="lang=${#locale.language}" th:lang="${lang}" dir="auto">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
 		<section class="container" id="main-container">
 			<div class="section">
 				<div class="container" id="top" style="display:flex;">			
-					<div class="left" style="padding-right: 12px;"><img class="profile-pic left" th:src="${partner.profilePicture}"></div>
+					<div class="left" style="padding-right: 12px; padding-left: 12px;"><img class="profile-pic left" th:src="${partner.profilePicture}"></div>
 					<div class="left" th:text="${partner.firstName}" id="first-name" style="word-break:break-all;  overflow: hidden; max-height: 45px; flex-grow: 1;"></div>
 					<div class="right button colored is-info" style="height: 40px; width: 40px;;" onclick="startVideoChat()"><i class="fa fa-video"></i></div>
 				</div>
