--- a/src/main/resources/templates/tos.html
+++ b/src/main/resources/templates/tos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" th:attr="dir=#{app.direction}">
+<html th:with="lang=${#locale.language}" th:lang="${lang}">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
