Add Turkish language button and other language stuff

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -223,6 +223,7 @@
 					<button class="button colored is-primary" value="?lang=zh" onclick="onChangeLocal(this.value)">中文*</button>
 					<button class="button colored is-primary" value="?lang=ko" onclick="onChangeLocal(this.value)">한국어*</button>
 					<button class="button colored is-primary" value="?lang=ar" onclick="onChangeLocal(this.value)">عربى*</button>
+					<button class="button colored is-primary" value="?lang=tr" onclick="onChangeLocal(this.value)">Türkçe*</button>
 					<div style="color: white"><span style="float:right; margin-right: 4px;">* beta</span></div>
 				</div>
 			</div>
