--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,8 @@
 	<link rel="alternate" hreflang="ja" href="/?lang=ja" />
 	<link rel="alternate" hreflang="zh" href="/?lang=zh" />
 	<link rel="alternate" hreflang="ko" href="/?lang=ko" />
+	<link rel="alternate" hreflang="ar" href="/?lang=ar" />
+	<link rel="alternate" hreflang="tr" href="/?lang=tr" />
 
 	<title th:text="#{app.name} + ' - ' + #{index.subtitle}"></title>
 	<meta name="description" th:content="#{meta.content}">
