Change tab title when getting new alert or message

--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -70,6 +70,7 @@
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/user-profile-modal.js"></script>
+	<script src="/js/notification.js"></script>
 </body>
 
 </html>
