--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -97,7 +97,27 @@
 						<div class="swiper-pagination" style="bottom: 20px;"></div>
 					</div>
 				</div>
-				
+
+				<div class="box" id="gender">
+					<label class="label" th:text="#{gender}" style="float: left;"></label><span
+						class="asterisk">*</span>
+					<div class="select">
+						<select name="gender" required>
+							<th:block th:each="gender : ${genders}">
+								<option th:value="${gender.id}" th:if="${gender.text == 'male'}"
+										th:selected="${user.gender.text == gender.text}"
+										th:text="${gender.text}"></option>
+								<option th:value="${gender.id}" th:if="${gender.text == 'female'}"
+										th:selected="${user.gender.text == gender.text}"
+										th:text="${gender.text}"></option>
+								<option th:value="${gender.id}" th:if="${gender.text == 'other'}"
+										th:selected="${user.gender.text == gender.text}"
+										th:text="${gender.text}"></option>
+							</th:block>
+						</select>
+					</div>
+				</div>
+
 				<div class="box" onclick="window.open('/donate-list', '_blank');" id="donate-box">
 					<label class="label" th:text="#{donated}"></label>
 					<label th:text=" ${#numbers.formatDecimal(user.totalDonations, 1, 2, 'POINT') + ' €'}"></td>></label>
